--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,404 @@
-/* место для вашего кода */
+html, body {
+    min-height: 100%;
+}
+
+.overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 1;
+}
+
+.header {
+    display: grid;
+    grid-template-columns: 432px 148px 383px;
+    padding: 93px 49.48px 95px 50.52px;
+    width: 1052px;
+    height: 105px;
+    align-items: center;
+    margin-bottom: 105px;
+}
+
+.header__logo {
+    display: block;
+}
+
+.header__logo-image {
+    width: 135px;
+}
+
+.header__links-list {
+    display: flex;
+    flex-direction: row;
+    list-style: circle;
+}
+
+.header__link {
+    font-family: Raleway, sans-serif;
+    color: #000000;
+    font-size: 18px;
+    letter-spacing: 0.2px;
+    margin-left: 5.5px;
+    text-decoration-thickness: 1px;
+    text-underline-offset: 4px;
+}
+
+.header__link_active{
+    font-family: Raleway, sans-serif;
+    color: #000000;
+    font-size: 18px;
+}
+
+.header__links-list-item {
+    margin-right: 27px;
+}
+
+.header__links-list-item .header__links-list-item_no-bullit {
+    text-decoration: none;
+}
+
+.header__links-list-item_no-bullit {
+    list-style: none;
+}
+
+.address {
+    font-family: Raleway, sans-serif;
+    font-style: normal;
+    justify-self: right;
+    text-align: left;;
+    color: #000000;
+    font-size: 18px;
+    line-height: 24.3px;
+    text-decoration-thickness: 0.5px;
+    text-underline-offset: 4px;
+}
+
+.cover {
+    position: relative;
+    display: grid;
+    background-image: url(../images/cover.jpg); 
+    width: 1100px;
+    height: 757px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    color: #fff;
+} 
+
+.cover__title {
+    font-family: Raleway, sans-serif;
+    font-size: 100px;
+    font-weight: 700;
+    text-transform: uppercase;
+    position: relative;
+    top: 165px; 
+    right: 50px;
+    bottom: 237px;
+    left: 50px;
+    line-height: 115px;
+    z-index: 2;
+}
+
+.aligned-text {
+    letter-spacing: 29.7px;
+}
+
+.aligned-text_center {
+    line-height: 100px;
+    letter-spacing: 30px;
+    padding-left: 286px;
+    position: relative;
+    top: 12px; 
+}
+
+.letter-spacing {
+    font: normal;
+    margin-left: -23px;
+    margin-bottom: 50px;
+}
+
+.letter-spacing-extended {
+    font: normal;
+    margin-left: -24px;
+    margin-bottom: 50px;
+}
+
+.aligned-text_right {
+    line-height: 100px;
+    padding-left: 584px;
+    position: relative;
+    top: 17px; 
+}
+
+.no-letter-spacing {
+    font: normal;
+    margin-left: 36px;
+    letter-spacing: 30px;
+}
+
+.cover__description {
+    margin-top: 285px;
+    display: grid;
+    grid-template-columns: 720px 380px;
+    grid-template-rows: 51px;
+    justify-content: space-around;
+    line-height: 115px;
+    z-index: 2;
+}
+
+.cover__description-text {
+    padding-left: 78px;
+    font-family: Raleway, sans-serif;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 28px;
+    text-transform: uppercase;
+    word-spacing: 18px;
+    letter-spacing: 0.2px;
+}
+
+.bet-button {
+    margin: -13px 50px 12px 74px;
+    border: 1px solid #fff;
+    padding: 12px 32px 11px 31px;
+    justify-content: flex-start;
+    text-decoration: none;
+}
+
+.bet-button-text {
+    font-family: Raleway, sans-serif;
+    color: #fff;
+    font-weight: 500;
+    font-size: 22px;
+    text-transform: uppercase;
+    line-height: 25px;
+}
+
+.lots {
+    width: 1052px;
+    height: 692px;
+    padding: 207px 24px 0px 24px;
+}
+
+.lots__heading {
+    font-family: Raleway, sans-serif;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 46.96px; 
+    text-transform: uppercase;
+    position: relative;
+    bottom: 26px; 
+    right: 915px;
+    left: 40px;
+}
+
+.card {
+    display: flex;
+    align-items: center;
+    width: 1052px;
+}
+
+.card_type_film {
+    position: relative;
+    display: grid;
+    grid-template-columns: 334px;
+    grid-template-rows: 161px 402px;
+    background-image: url(../images/card-lot-01.jpg); 
+    width: 334px;
+    height: 563px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    color: #fff;
+    margin-right: 25px;
+}
+
+.card_type_book {
+    position: relative;
+    display: grid;
+    grid-template-columns: 334px;
+    grid-template-rows: 161px 402px;
+    background-image: url(../images/card-lot-02.jpg); 
+    width: 334px;
+    height: 563px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    color: #fff;  
+    margin-right: 25px;
+}
+
+.card_type_picture {
+    position: relative;
+    display: grid;
+    grid-template-columns: 334px;
+    grid-template-rows: 161px 402px;
+    background-image: url(../images/card-lot-03.jpg); 
+    width: 334px;
+    height: 563px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    color: #fff; 
+}
+
+.lots__card-list-item {
+    font-family: Raleway, sans-serif;
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 26.4px;
+    text-transform: uppercase;
+    text-decoration: underline;
+    text-decoration-thickness: 1px;
+    text-underline-offset: 3px;
+    align-content: flex-start;
+    margin-top: 51px;
+    margin-left: 40px;
+    margin-right: 40px;
+    z-index: 2;
+}
+
+.card-text {
+    font-family: Raleway, sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    align-content: flex-end;
+    margin-bottom: 48px;
+    margin-left: 40px;
+    margin-right: 40px;
+    z-index: 2;
+}
+
+.card-link {
+    font-family: Raleway, sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 23.48px; 
+    text-transform: lowercase;
+    text-decoration: underline;
+    text-decoration-thickness: 1px;
+    text-underline-offset: 4px;
+    position: relative;
+    top: 30px; 
+    right: 820px;
+    left: 40px;
+}
+
+.about {
+    width: 1052px;
+    height: 595px;
+    padding: 181px 24px 0 24px;
+}
+
+.about__column {
+    display: grid;
+    grid-template-columns: 334px 724px;
+    grid-template-rows: 283px 143.5px 192px;
+}  
+
+.elem1 {
+    grid-column: 1/2;
+}
+
+.elem2 {
+    grid-column: 2/3;
+}
+
+.elem3 {
+    grid-column: 1/3;
+}
+
+.elem4 {
+    grid-column: 1/3;
+}
+
+.about__logo {
+    justify-content: center;
+    align-items: center; 
+    width: 240px;
+    height: 240px;
+    background: #000000;
+    border-radius: 120px;
+    position: relative;
+    top: 181px;
+    left: 48px;
+
+}
+
+.about__logo-image {
+    width: 148px;
+    height: 114px;
+    position: relative;
+    top: 64px;
+    right: 45.52px;
+    bottom: 62px;
+    left: 46.48px;
+}
+
+.about__title {
+    margin-left: 25px;
+    margin-top: 281px;
+    font-family: Raleway, sans-serif;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 46.96px; 
+    text-transform: uppercase;
+    position: relative;
+}
+
+.about__text {
+    margin-top: 145px;
+    margin-left: 359px;
+    font-family: Raleway, sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    word-spacing: 1px;
+    line-height: 24px;
+} 
+
+.footer {
+    display: grid;
+    grid-template-columns: 240.52px 518.96px 240.52px;
+    grid-template-rows: 98px;
+    justify-content: space-between;
+    margin-top: 506px;
+    margin-left: 13px;
+    width: 1000px;
+    height: 98px;
+}
+
+.footer__menu {
+    margin-top: 1px;
+    margin-left: 74px;
+}
+
+.footer__menu-list {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    align-items: center;
+}
+
+.footer__menu-link {
+    font-family: Raleway, sans-serif;
+    color: #000000;
+    font-size: 18px;
+    line-height: 21.13px;
+    text-decoration-thickness: 1px;
+    text-underline-offset: 4px;
+}
+
+.footer__menu-list-item .footer__menu-link_active {
+    text-decoration: none;
+}
+
+.footer__social-list {
+    display: grid;
+    grid-template-columns: 48px 48px 48px;
+    grid-template-rows: 48px;
+    gap: 48px;
+    justify-content: space-between;
+    margin-left: 38px;
+}
